sample/error/e01205-n.asn
E01205-N DEFINITIONS ::=
BEGIN
    MyInt ::= INTEGER
END

E01205-N DEFINITIONS ::=
BEGIN
    MyReal ::= REAL
END
